--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"></meta>
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-        <title>Miller Hall</title>
+        <title>About Me</title>
             <meta name="description" content="The home page of my personal website describes who I am, what I do, and some of my latest projects."></meta>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
@@ -12,22 +12,24 @@
   <body>
     <div class="container">
       <div class="header">
-      <span class="header-button"><a href="/">home</a></span>
-      <span class="header-button-space"></span>
-      <span class="header-button"><a href="/posts.html">posts</a></span>
+      <span class="header-float-right"><h1>Miller Hall</h1></span>
+      <div><span class="header-button"><a href="/">home</a></span></div>
+      <div><span class="header-button"><a href="/posts.html">posts</a></span></div>
 
-      <span class="header-button header-button-float-right">
-        <a href="https://twitter.com/arlindohall">twitter</a>
-      </span>
+      <div>
+        <span class="header-button">
+          <a href="https://twitter.com/arlindohall">twitter</a>
+        </span>
+      </div>
       </div>
 
       <div id="main" class="main">
         <div class="main-buffer">
-<!--
+        <!--
   Indentation is messed up here because pandoc indents code blocks
   if they are indented with the content.
 -->
-<h1 id="miller-hall">Miller Hall</h1>
+<h1 id="about-me">About Me</h1>
 <p>I am a software developer and tinkerer based in Herndon, Virginia. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">goodreads</a>) and take walks with my wife and my dog. I’m originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas.</p>
 <h2 id="work">Work</h2>
 <ul>
