--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"></meta>
     <link rel="stylesheet" href="/styles.css"></link>
     <link rel="icon" type="image/svg" href="/assets/logo.svg"></link>
-        <title>About Me</title>
+        <title>Miller Hall</title>
             <meta name="description" content="The home page of my personal website describes who I am, what I do, and some of my latest projects."></meta>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
