--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   if they are indented with the content.
 -->
 <h1 id="about-me">About Me</h1>
-<p>I am a software developer and tinkerer based in Herndon, Virginia. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (check out my <a href="https://www.goodreads.com/user/show/52490059-miller-hall">goodreads</a>) and take walks with my wife and my dog. I’m originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas.</p>
+<p>I am a software developer and tinkerer based in Herndon, Virginia. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (maybe don’t check out my goodreads because I always forget to update it) and take walks with my wife and my dog. I’m originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas: barbecue, the Appalachians, the Outer Banks, the NC music scene…</p>
 <h2 id="work">Work</h2>
 <ul>
-<li>I have been an SDE at AWS in Arlington, Virginia since 2017</li>
+<li>I have been an SDE at AWS in Northern Virginia since 2017</li>
 <li>I spent three years on a team focused on software quality during the region build process</li>
 <li>I now work on building edge solutions custom-built to customer needs</li>
 </ul>
@@ -44,9 +44,9 @@
     title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
     alt="Dunning-kruger effect graph, from wikimedia commons"> </img></p>
 <ul>
-<li><a href="https://github.com/arlindohall/rlox"><code>rlox</code></a> : Working through the book <a href="https://craftinginterpreters.com">Crafting Interpreters</a> in Rust</li>
-<li><a href="https://github.com/arlindohall/advent.lua">Advent of code</a> in lua, one of my favorite programming languages</li>
-<li><a href="https://github.com/arlindohall/sicp"><code>sicp</code></a> : Working through the examples in <a href="https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book.html">Structure and Interpretation of Computer Programs</a></li>
+<li>I’m working through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: https://github.com/arlindohall/rlox</li>
+<li>I’ve now started the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: https://github.com/arlindohall/clox</li>
+<li>I’m mentoring a Clemson University senior capstone team to build a sign-in console for the Clemson Makerspace. The code isn’t open-sourced yet but we are planning to do so.</li>
 </ul>
         </div>
       </div>
