Fix compile script, action, and downgrade tempalte
The template relied on a feature of pandoc that's only in more
recent versions, namely `elseif`, which doesn't work on 2.5,
the version that I'm able to install easily on GitHub actions.

The change to the action installs pandoc and runs the same
script I use locally.

The script is cleaned up according to feedback from shellcheck,
and in the last version I removed checks that it's running in
the correct directory since the goal now is to automate it.

--- a/_template.html
+++ b/_template.html
@@ -11,10 +11,12 @@
     $endif$
     $if(description)$
     <meta name="description" content="$description$"></meta>
-    $elseif(title)$
-    <meta name="description" content="$title$"></meta>
     $else$
-    <meta name="description" content=$outputfile$></meta>
+      $if(title)$
+      <meta name="description" content="$title$"></meta>
+      $else$
+      <meta name="description" content=$outputfile$></meta>
+      $endif$
     $endif$
     <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
