Automatically updated using GitHub Actions

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
     alt="Dunning-kruger effect graph, from wikimedia commons"> </img></p>
 <ul>
-<li>I’m working through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: https://github.com/arlindohall/rlox</li>
-<li>I’ve now started the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: https://github.com/arlindohall/clox</li>
+<li>I’m working through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: <a href="https://github.com/arlindohall/rlox">rlox</a></li>
+<li>I’ve now started the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: <a href="https://github.com/arlindohall/clox">clox</a></li>
 <li>I’m mentoring a Clemson University senior capstone team to build a sign-in console for the Clemson Makerspace. The code isn’t open-sourced yet but we are planning to do so.</li>
 </ul>
         </div>
