Automatically updated using GitHub Actions

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   if they are indented with the content.
 -->
 <h1 id="about-me">About Me</h1>
-<p>I am a software developer and tinkerer based in Herndon, Virginia. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (maybe don’t check out my goodreads because I always forget to update it) and take walks with my wife and my dog. I’m originally from North Carolina, and I graduated from Clemson in 2016. I love all things Carolinas: barbecue, the Appalachians, the Outer Banks, the NC music scene…</p>
+<p>I’m a software developer from High Point, North Carolina. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (maybe don’t check out my goodreads because I always forget to update it) and take walks with my wife and my dog. I love all things Carolinas: barbecue, the Appalachians, the Outer Banks, the NC music scene, and I graduated from Clemson University in 2016.</p>
 <h2 id="work">Work</h2>
 <ul>
-<li>I have been an SDE at AWS in Northern Virginia since 2017</li>
-<li>I spent three years on a team focused on software quality during the region build process</li>
-<li>I now work on building edge solutions custom-built to customer needs</li>
+<li>I’ve been writing software professionally for 5 years now, currently at Shopify.</li>
+<li>I’ve build web services to support the process of building new AWS regions</li>
+<li>I’ve worked on edge computing hardware and software</li>
 </ul>
 <h2 id="projects">Projects</h2>
 <p>I’ve given up on most of these, as I prefer the peak of the dunning-kruger effect to the valleys.</p>
@@ -44,10 +44,10 @@
     title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
     alt="Dunning-kruger effect graph, from wikimedia commons"> </img></p>
 <ul>
-<li>I’ve started writing a toy interpreter for the Lua language in Go as a way to try to learn Go, to compare the performance of a tree-walk intepreter and a bytecode machine, and to apply what I learned from the two below projects. The language is called <a href="https://github.com/arlindohall/glua"><code>glua</code></a> and it’s still in-progress. I have more details <a href="/posts/glua-a-toy-lua-interpreter.html">here</a></li>
-<li>I’m working through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: <a href="https://github.com/arlindohall/rlox">rlox</a></li>
-<li>I’ve now started the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: <a href="https://github.com/arlindohall/clox">clox</a></li>
-<li>I’m mentoring a Clemson University senior capstone team to build a sign-in console for the Clemson Makerspace. The code isn’t open-sourced yet but we are planning to do so.</li>
+<li>I’ve written a toy interpreter for the Lua language in Go as a way to try to learn Go, to compare the performance of a tree-walk intepreter and a bytecode machine, and to apply what I learned from the two below projects. The language is called <a href="https://github.com/arlindohall/glua"><code>glua</code></a> and is mostly done. I have more details <a href="/posts/glua-a-toy-lua-interpreter.html">here</a></li>
+<li>I had a lot of fun workting through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: <a href="https://github.com/arlindohall/rlox">rlox</a></li>
+<li>I’ve paused working on the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: <a href="https://github.com/arlindohall/clox">clox</a></li>
+<li>During 2020-2021 I mentored a Clemson University senior capstone team to build a sign-in console for the Clemson Makerspace.</li>
 </ul>
         </div>
       </div>
