--- a/posts.html
+++ b/posts.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="/custom.css">
     <link rel="icon" type="image/svg" href="/assets/logo.svg">
         <title>Posts - Miller Hall</title>
-            <meta name="description" content="A list of posts I’ve
-written"></meta>
+            <meta name="description" content="A list of posts I’ve written"></meta>
         <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
   </head>
@@ -26,20 +25,13 @@ written"></meta>
   if they are indented with the content.
 -->
 <h1 id="posts">Posts</h1>
-<p>This is a list of posts I’ve written. I’m trying to learn in public,
-and I think it’s more important to share the posts than to have them in
-perfect shape.</p>
-<p>This whole site is built with pandoc and served with github pages
-because why do things the hard way when you do it quicker with free
-tools!</p>
+<p>This is a list of posts I’ve written. I’m trying to learn in public, and I think it’s more important to share the posts than to have them in perfect shape.</p>
+<p>This whole site is built with pandoc and served with github pages because why do things the hard way when you do it quicker with free tools!</p>
 <h2 id="post-list">Post List</h2>
 <ul>
-<li><a href="/posts/event-log-single-page-app.html">Simple event logging
-single page app</a></li>
-<li><a href="/posts/random-strings-in-bash.html">Generating random data
-in <code>{fi,ba,z,}sh</code></a></li>
-<li><a href="/posts/build-a-website-with-pandoc-and-pages.html">Make
-your own website like this one</a></li>
+<li><a href="/posts/event-log-single-page-app.html">Simple event logging single page app</a></li>
+<li><a href="/posts/random-strings-in-bash.html">Generating random data in <code>{fi,ba,z,}sh</code></a></li>
+<li><a href="/posts/build-a-website-with-pandoc-and-pages.html">Make your own website like this one</a></li>
 </ul>
     </main>
     <footer>
