Add wiki section with inter-linking topic pages

--- a/wiki/productivity.html
+++ b/wiki/productivity.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="/custom.css">
   <link rel="icon" type="image/svg" href="/assets/logo.svg">
-    <title>Event Log: a single-page app</title>
-      <meta name="description" content="A weekend project from October
-2022">
+    <title>Productivity Hacks</title>
+      <meta name="description" content="How I get shit done (if I get it
+done)">
   </meta>
     <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
   </meta>
@@ -28,22 +28,11 @@
     </nav>
   </header>
   <main>
-        <p class="light-text">October 9, 2022</p>
         <!--
   Indentation is messed up here because pandoc indents code blocks
   if they are indented with the content.
 -->
-    <h1 id="event-log">Event Log</h1>
-    <p>This is something I built in an hour yesterday because my wife
-    wanted an app to track when the baby kicks. The whole thing runs in
-    and all data is stored in the browser. I used
-    <code>create-react-app</code> with a progressive web app template so
-    the app can be downloaded to your home screen (on iOS just open in
-    Safare and click share). You can’t share sessions between devices,
-    but you can reload the website or close the tab and data will
-    persist.</p>
-    <pre><code>npx create-react-app my-app --template cra-template-pwa-typescript</code></pre>
-    <p>The app is located <a href="/events">here</a>.</p>
+    
   </main>
   <footer>
     <img class="index-personal-logo" title="Personal logo" alt="Personal website logo, a monogram of MAH, my initials"
@@ -51,8 +40,8 @@
     </img>
 
     <p>Page source on GitHub:
-      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts/event-log-single-page-app.html">html</a>,
-      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_posts/event-log-single-page-app.md">md</a>)
+      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/wiki/productivity.html">html</a>,
+      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_wiki/productivity.md">md</a>)
     </p>
   </footer>
 </body>
