--- a/_template.html
+++ b/_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="/custom.css">
     <link rel="icon" type="image/svg" href="/assets/logo.svg">
@@ -11,22 +11,23 @@
     <title>Miller Arlindo Hall</title>
     $endif$
     $if(description)$
-    <meta name="description" content="$description$"></meta>
+    <meta name="description" content="$description$">
     $else$
       $if(title)$
-      <meta name="description" content="$title$"></meta>
+      <meta name="description" content="$title$">
       $else$
-      <meta name="description" content=$outputfile$></meta>
+      <meta name="description" content=$outputfile$>
       $endif$
     $endif$
-    <meta name="author" content="Miller Arlindo Hall (hall@hey.com)"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
       <h1>Miller Hall</h1>
       <nav>
         <a href="/">home</a>
+        <a href="/wiki.html">wiki</a>
         <a href="/posts.html">posts</a>
         <a href="https://twitter.com/arlindohall">twitter</a>
       </nav>
