--- a/wiki.html
+++ b/wiki.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="/custom.css">
   <link rel="icon" type="image/svg" href="/assets/logo.svg">
-    <title>Event Log: a single-page app</title>
-      <meta name="description" content="A weekend project from October
-2022">
+    <title>Wiki - Miller Hall</title>
+      <meta name="description" content="A wiki of things I’m interested
+in">
   </meta>
     <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
   </meta>
@@ -28,22 +28,25 @@
     </nav>
   </header>
   <main>
-        <p class="light-text">October 9, 2022</p>
         <!--
   Indentation is messed up here because pandoc indents code blocks
   if they are indented with the content.
 -->
-    <h1 id="event-log">Event Log</h1>
-    <p>This is something I built in an hour yesterday because my wife
-    wanted an app to track when the baby kicks. The whole thing runs in
-    and all data is stored in the browser. I used
-    <code>create-react-app</code> with a progressive web app template so
-    the app can be downloaded to your home screen (on iOS just open in
-    Safare and click share). You can’t share sessions between devices,
-    but you can reload the website or close the tab and data will
-    persist.</p>
-    <pre><code>npx create-react-app my-app --template cra-template-pwa-typescript</code></pre>
-    <p>The app is located <a href="/events">here</a>.</p>
+    <h1 id="wiki">Wiki</h1>
+    <p>This is a wiki of things I’m interested, be it computer things
+    that I know about, courses I’ve taken, or even just shiny things I
+    found on the ground.</p>
+    <h2 id="index">Index</h2>
+    <p>Some links to my favorite wiki pages:</p>
+    <ul>
+    <li><a href="/wiki/books.html">Books I’ve read and maybe
+    liked</a></li>
+    <li><a href="/wiki/courses.html">Courses I probably still haven’t
+    finished</a></li>
+    <li><a href="/wiki/rails.html">Ruby on Rails stuff</a></li>
+    <li><a href="/wiki/productivity.html">Productivity hacks</a></li>
+    <li><a href="/wiki/projects.html">Stuff I’ve built</a></li>
+    </ul>
   </main>
   <footer>
     <img class="index-personal-logo" title="Personal logo" alt="Personal website logo, a monogram of MAH, my initials"
@@ -51,8 +54,8 @@
     </img>
 
     <p>Page source on GitHub:
-      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts/event-log-single-page-app.html">html</a>,
-      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_posts/event-log-single-page-app.md">md</a>)
+      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/wiki.html">html</a>,
+      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/wiki.md">md</a>)
     </p>
   </footer>
 </body>
