Automatically updated using GitHub Actions

--- a/posts.html
+++ b/posts.html
@@ -1,79 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  </meta>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-  <link rel="stylesheet" href="/custom.css">
-  <link rel="icon" type="image/svg" href="/assets/logo.svg">
-    <title>Posts - Miller Hall</title>
-      <meta name="description" content="A list of posts I’ve written">
-  </meta>
-    <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
-  </meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  </meta>
-</head>
-
-<body>
-  <header>
-    <h1>Miller Hall</h1>
-    <nav>
-      <a href="/">home</a>
-      <a href="/wiki.html">wiki</a>
-      <a href="/posts.html">posts</a>
-      <a href="https://twitter.com/arlindohall">twitter</a>
-    </nav>
-  </header>
-  <main>
-        <!--
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="/custom.css">
+    <link rel="icon" type="image/svg" href="/assets/logo.svg">
+        <title>Posts - Miller Hall</title>
+            <meta name="description" content="A list of posts I’ve written">
+        <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <header>
+      <h1>Miller Hall</h1>
+      <nav>
+        <a href="/">home</a>
+        <a href="/wiki.html">wiki</a>
+        <a href="/posts.html">posts</a>
+        <a href="https://twitter.com/arlindohall">twitter</a>
+      </nav>
+    </header>
+    <main>
+      <!--
   Indentation is messed up here because pandoc indents code blocks
   if they are indented with the content.
 -->
-    <h1 id="posts">Posts</h1>
-    <p>This is a list of posts I’ve written. I’m trying to learn in
-    public, and I think it’s more important to share the posts than to
-    have them in perfect shape.</p>
-    <p>This whole site is built with pandoc and served with github pages
-    because why do things the hard way when you do it quicker with free
-    tools!</p>
-    <h2 id="post-list">Post List</h2>
-    <ul>
-    <li><a href="/posts/event-log-single-page-app.html">Simple event
-    logging single page app</a></li>
-    <li><a href="/posts/random-strings-in-bash.html">Generating random
-    data in <code>{fi,ba,z,}sh</code></a></li>
-    <li><a href="/posts/build-a-website-with-pandoc-and-pages.html">Make
-    your own website like this one</a></li>
-    </ul>
-  </main>
-  <footer>
-    <img class="index-personal-logo" title="Personal logo" alt="Personal website logo, a monogram of MAH, my initials"
-      style="height: 40px;" src="/assets/logo.svg">
-    </img>
+<h1 id="posts">Posts</h1>
+<p>This is a list of posts I’ve written. I’m trying to learn in public, and I think it’s more important to share the posts than to have them in perfect shape.</p>
+<p>This whole site is built with pandoc and served with github pages because why do things the hard way when you do it quicker with free tools!</p>
+<h2 id="post-list">Post List</h2>
+<ul>
+<li><a href="/posts/event-log-single-page-app.html">Simple event logging single page app</a></li>
+<li><a href="/posts/random-strings-in-bash.html">Generating random data in <code>{fi,ba,z,}sh</code></a></li>
+<li><a href="/posts/build-a-website-with-pandoc-and-pages.html">Make your own website like this one</a></li>
+</ul>
+    </main>
+    <footer>
+      <img class="index-personal-logo"
+          title="Personal logo"
+          alt="Personal website logo, a monogram of MAH, my initials"
+          style="height: 40px;"
+          src="/assets/logo.svg">
+      </img>
 
-    <p>Page source on GitHub:
-      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">html</a>,
-      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/posts.md">md</a>)
-    </p>
-  </footer>
-</body>
-<script>
-  window.addEventListener('DOMContentLoaded', () => {
-    let headers = document.querySelectorAll("h1,h2,h3,h4");
-    for (let h of headers) {
-      let content = h.textContent;
-      let id = '#' + h.id;
-      let a = document.createElement('a');
+      <p>Page source on GitHub:
+        (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/posts.html">html</a>,
+        <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/posts.md">md</a>)
+      </p>
+    </footer>
+  </body>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      let headers = document.querySelectorAll("h1,h2,h3,h4");
+      for (let h of headers) {
+        let content = h.textContent;
+        let id = '#' + h.id;
+        let a = document.createElement('a');
 
-      a.setAttribute('href', id);
-      a.textContent = content;
+        a.setAttribute('href', id);
+        a.textContent = content;
 
-      h.textContent = '';
-      h.appendChild(a);
-    }
-  });
-</script>
-
+        h.textContent = '';
+        h.appendChild(a);
+      }
+    });
+  </script>
 </html>
