--- a/index.html
+++ b/index.html
@@ -1,111 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  </meta>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-  <link rel="stylesheet" href="/custom.css">
-  <link rel="icon" type="image/svg" href="/assets/logo.svg">
-    <title>Miller Hall</title>
-      <meta name="description" content="The home page of my personal
-website describes who I am, what I do, and some of my latest projects.">
-  </meta>
-    <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
-  </meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  </meta>
-</head>
-
-<body>
-  <header>
-    <h1>Miller Hall</h1>
-    <nav>
-      <a href="/">home</a>
-      <a href="/wiki.html">wiki</a>
-      <a href="/posts.html">posts</a>
-      <a href="https://twitter.com/arlindohall">twitter</a>
-    </nav>
-  </header>
-  <main>
-        <!--
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <link rel="stylesheet" href="/custom.css">
+    <link rel="icon" type="image/svg" href="/assets/logo.svg">
+        <title>Miller Hall</title>
+            <meta name="description" content="The home page of my personal website describes who I am, what I do, and some of my latest projects.">
+        <meta name="author" content="Miller Arlindo Hall (hall@hey.com)">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <header>
+      <h1>Miller Hall</h1>
+      <nav>
+        <a href="/">home</a>
+        <a href="/wiki.html">wiki</a>
+        <a href="/posts.html">posts</a>
+        <a href="https://twitter.com/arlindohall">twitter</a>
+      </nav>
+    </header>
+    <main>
+      <!--
   Indentation is messed up here because pandoc indents code blocks
   if they are indented with the content.
 -->
-    <h1 id="about-me">About Me</h1>
-    <p>I’m a software developer from High Point, North Carolina.
-    Software is my job and my hobby, and my work and personal projects
-    are listed below. On the weekends I like to read (maybe don’t check
-    out my goodreads because I always forget to update it) and take
-    walks with my wife and my dog. I love all things Carolinas:
-    barbecue, the Appalachians, the Outer Banks, the NC music scene, and
-    I graduated from Clemson University in 2016.</p>
-    <h2 id="work">Work</h2>
-    <ul>
-    <li>I’ve been writing software professionally for 5 years now,
-    currently at Shopify.</li>
-    <li>I’ve build web services to support the process of building new
-    AWS regions</li>
-    <li>I’ve worked on edge computing hardware and software</li>
-    </ul>
-    <h2 id="projects">Projects</h2>
-    <p>I’ve given up on most of these, as I prefer the peak of the
-    dunning-kruger effect to the valleys.</p>
-    <p><img class="image-center"
-        src="/assets/dunning-kruger.jpg"
-        title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
-        alt="Dunning-kruger effect graph, from wikimedia commons">
-    </img></p>
-    <ul>
-    <li>I’ve written a toy interpreter for the Lua language in Go as a
-    way to try to learn Go, to compare the performance of a tree-walk
-    intepreter and a bytecode machine, and to apply what I learned from
-    the two below projects. The language is called <a
-    href="https://github.com/arlindohall/glua"><code>glua</code></a> and
-    is mostly done. I have more details <a
-    href="/posts/glua-a-toy-lua-interpreter.html">here</a></li>
-    <li>I had a lot of fun workting through the book <a
-    href="https://craftinginterpreters.com"><em>Crafting
-    Interpreters</em></a> in Rust. I build a functioning tree-walk
-    interpreter, but it’s really slow because of the incredibly simple
-    memory management and the fact that I clone some large data types
-    rather than deal with lifetimes. It was my first rust projec though,
-    and I learned a lot: <a
-    href="https://github.com/arlindohall/rlox">rlox</a></li>
-    <li>I’ve paused working on the bytecode interpreter from
-    <em>Crafting Interpreters</em> in Rust after following the C
-    implementation. This one I’m a little more proud of: <a
-    href="https://github.com/arlindohall/clox">clox</a></li>
-    <li>During 2020-2021 I mentored a Clemson University senior capstone
-    team to build a sign-in console for the Clemson Makerspace.</li>
-    </ul>
-  </main>
-  <footer>
-    <img class="index-personal-logo" title="Personal logo" alt="Personal website logo, a monogram of MAH, my initials"
-      style="height: 40px;" src="/assets/logo.svg">
-    </img>
+<h1 id="about-me">About Me</h1>
+<p>I’m a software developer from High Point, North Carolina. Software is my job and my hobby, and my work and personal projects are listed below. On the weekends I like to read (maybe don’t check out my goodreads because I always forget to update it) and take walks with my wife and my dog. I love all things Carolinas: barbecue, the Appalachians, the Outer Banks, the NC music scene, and I graduated from Clemson University in 2016.</p>
+<h2 id="work">Work</h2>
+<ul>
+<li>I’ve been writing software professionally for 5 years now, currently at Shopify.</li>
+<li>I’ve build web services to support the process of building new AWS regions</li>
+<li>I’ve worked on edge computing hardware and software</li>
+</ul>
+<h2 id="projects">Projects</h2>
+<p>I’ve given up on most of these, as I prefer the peak of the dunning-kruger effect to the valleys.</p>
+<p><img class="image-center"
+    src="/assets/dunning-kruger.jpg"
+    title="LittleT889, CC BY-SA 4.0 https://creativecommons.org/licenses/by-sa/4.0, via Wikimedia Commons"
+    alt="Dunning-kruger effect graph, from wikimedia commons"> </img></p>
+<ul>
+<li>I’ve written a toy interpreter for the Lua language in Go as a way to try to learn Go, to compare the performance of a tree-walk intepreter and a bytecode machine, and to apply what I learned from the two below projects. The language is called <a href="https://github.com/arlindohall/glua"><code>glua</code></a> and is mostly done. I have more details <a href="/posts/glua-a-toy-lua-interpreter.html">here</a></li>
+<li>I had a lot of fun workting through the book <a href="https://craftinginterpreters.com"><em>Crafting Interpreters</em></a> in Rust. I build a functioning tree-walk interpreter, but it’s really slow because of the incredibly simple memory management and the fact that I clone some large data types rather than deal with lifetimes. It was my first rust projec though, and I learned a lot: <a href="https://github.com/arlindohall/rlox">rlox</a></li>
+<li>I’ve paused working on the bytecode interpreter from <em>Crafting Interpreters</em> in Rust after following the C implementation. This one I’m a little more proud of: <a href="https://github.com/arlindohall/clox">clox</a></li>
+<li>During 2020-2021 I mentored a Clemson University senior capstone team to build a sign-in console for the Clemson Makerspace.</li>
+</ul>
+    </main>
+    <footer>
+      <img class="index-personal-logo"
+          title="Personal logo"
+          alt="Personal website logo, a monogram of MAH, my initials"
+          style="height: 40px;"
+          src="/assets/logo.svg">
+      </img>
 
-    <p>Page source on GitHub:
-      (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">html</a>,
-      <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/index.md">md</a>)
-    </p>
-  </footer>
-</body>
-<script>
-  window.addEventListener('DOMContentLoaded', () => {
-    let headers = document.querySelectorAll("h1,h2,h3,h4");
-    for (let h of headers) {
-      let content = h.textContent;
-      let id = '#' + h.id;
-      let a = document.createElement('a');
+      <p>Page source on GitHub:
+        (<a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/index.html">html</a>,
+        <a href="https://github.com/arlindohall/arlindohall.github.io/blob/mainline/_root/index.md">md</a>)
+      </p>
+    </footer>
+  </body>
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      let headers = document.querySelectorAll("h1,h2,h3,h4");
+      for (let h of headers) {
+        let content = h.textContent;
+        let id = '#' + h.id;
+        let a = document.createElement('a');
 
-      a.setAttribute('href', id);
-      a.textContent = content;
+        a.setAttribute('href', id);
+        a.textContent = content;
 
-      h.textContent = '';
-      h.appendChild(a);
-    }
-  });
-</script>
-
+        h.textContent = '';
+        h.appendChild(a);
+      }
+    });
+  </script>
 </html>
